<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="specificGame"
            type="com.example.gamesapp.domain.model.SpecificGameModel" />

    </data>

    <ScrollView
        android:background="@color/md_theme_light_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/descriptionTitle"
            style="@style/otherTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="2dp"
            android:text="@string/description_string"
            android:textColor="@color/md_theme_dark_primaryContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/developerTitle"
            style="@style/otherTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:text="@string/developer_string"
            android:textColor="@color/md_theme_dark_primaryContainer"
            app:layout_constraintBaseline_toBaselineOf="@+id/developer"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/statusTitle"
            style="@style/otherTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:text="@string/status_string"
            android:textColor="@color/md_theme_dark_primaryContainer"
            app:layout_constraintBaseline_toBaselineOf="@+id/status"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageViewSpecificGame"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/image_of_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:load_image="@{specificGame.thumbnail}" />

        <TextView
            android:id="@+id/title"
            style="@style/titleTextStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@{specificGame.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewSpecificGame" />

        <TextView
            android:id="@+id/specificGenre"
            style="@style/otherTextStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="24dp"
            android:text="@{specificGame.genre}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/genreTitle"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/platform"
            style="@style/otherTextStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="24dp"
            android:text="@{specificGame.platform}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/platformTitle"
            app:layout_constraintTop_toBottomOf="@+id/specificGenre" />


        <TextView
            android:id="@+id/developer"
            style="@style/otherTextStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="24dp"
            android:text="@{specificGame.developer}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/developerTitle"
            app:layout_constraintTop_toBottomOf="@+id/platform" />

        <TextView
            android:id="@+id/status"
            style="@style/otherTextStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="24dp"
            android:text="@{specificGame.status}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/statusTitle"
            app:layout_constraintTop_toBottomOf="@+id/developer" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/platformTitle"
            style="@style/otherTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:text="@string/platform_string"
            android:textColor="@color/md_theme_dark_primaryContainer"
            app:layout_constraintBaseline_toBaselineOf="@+id/platform"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/genreTitle"
            style="@style/otherTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:text="@string/genre_string"
            android:textColor="@color/md_theme_dark_primaryContainer"
            app:layout_constraintBaseline_toBaselineOf="@+id/specificGenre"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/full_description"
            style="@style/otherTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:text="@{specificGame.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>